SERVER-32960 Make $mod always truncate divisor and remainder toward zero