src/mongo/db/matcher/expression_parser.cpp
@@ -512,10 +512,17 @@ StatusWithMatchExpression parseMOD(StringData name,
     if (iter.more())
         return {Status(ErrorCodes::BadValue, "malformed mod, too many elements")};
 
+    auto truncateToInt = [](const BSONElement& element) -> int {
+        if (element.type() == BSONType::NumberDecimal) {
+            return element.numberDecimal().toInt(Decimal128::kRoundTowardZero);
+        }
+        return element.numberInt();
+    };
+
     return {std::make_unique<ModMatchExpression>(
         name,
-        divisor.numberInt(),
-        remainder.numberInt(),
+        truncateToInt(divisor),
+        truncateToInt(remainder),
         doc_validation_error::createAnnotation(
             expCtx, elem.fieldNameStringData().toString(), BSON(name << elem.wrap())))};
 }
